# bgem

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  bootstrap-bgem.sh  vcpkg.json
.github/workflows/: build.yml
assets/shaders/blit/: fragment.glsl  vertex.glsl
assets/shaders/testshader/: fragment.glsl  vertex.glsl
cmake/: compiler_options.cmake  version.cmake
include/: bgem_version.h.in
include/app/: app.h
include/core/: debug.h
include/platform/: platform_window.h
include/renderer/: loop.h  render_loop.h  renderer.h  shader.h
include/system/: system.h
include/window/: init_window.h  window.h
scripts/: bootstrap.ps1  bootstrap.sh
source/: CMakeLists.txt  main.c
source/app/: CMakeLists.txt  app.c
source/platform/: CMakeLists.txt
source/platform/linux/: CMakeLists.txt  platform_window_linux.c
source/platform/macos/: CMakeLists.txt  platform_window_macos.m
source/platform/windows/: CMakeLists.txt  platform_window_win.c
source/renderer/: CMakeLists.txt  loop.c  render_loop.c  renderer.c  shader.c
source/system/: CMakeLists.txt  system.c
source/window/: CMakeLists.txt  init_window.c  window.c
